@@ -1,3 +1,9 @@
+2016-03-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mel.el (mel-prompt-for-encoding): New function.
+	(mime-encode-region, mime-decode-region)
+	(mime-insert-encoded-file, mime-write-decoded-region): Use it.
+
 2015-12-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* smtp.el (smtp-send-buffer, smtp-send-buffer-by-myself): Kill
